testdata/baselines/reference/submodule/conformance/jsDeclarationsTypedefAndImportTypes.errors.txt
usage.js(11,37): error TS2694: Namespace 'Conn' has no exported member 'Whatever'.


==== conn.js (0 errors) ====
    /**
     * @typedef {string | number} Whatever
     */
    
    class Conn {
        constructor() {}
        item = 3;
        method() {}
    }
    
    module.exports = Conn;
    
==== usage.js (1 errors) ====
    /**
     * @typedef {import("./conn")} Conn
     */
    
    class Wrap {
        /**
         * @param {Conn} c
         */
        constructor(c) {
            this.connItem = c.item;
            /** @type {import("./conn").Whatever} */
                                        ~~~~~~~~
!!! error TS2694: Namespace 'Conn' has no exported member 'Whatever'.
            this.another = "";
        }
    }
    
    module.exports = {
        Wrap
    };
    